assets/css/jr-styles.css
/* ... */
.owl-nav .owl-next{   
    background-color: #d4bb97 !important;

}


.owl-dot span{   
    background-color: #d4bb97 !important;

}

.owl-dot.active span{   
    background-color: #D6D6D6 !important;

}



/* === NAV STYLES === */

#navbar-site-top .container{
    width: 100%;
}
#navbar-site-top .container{
    width: 100%;
}
#navbar-site-top .container .row div:first-of-type{
    padding-left: 0px;
}
#navbar-site-top a.nav-link{
    color: white;
    font-size: 20px;
    font-family: 'Prata', serif; 
    text-shadow:2px 2px black;
}

#navbar-site-top a.nav-link:hover{
 
text-decoration-color: grey;
    text-decoration: underline;  
}
#navbar-site-top ul {
    display:inline-block;
    margin:0 auto;
}
#navbar-site-top {
      background-color: rgba(184,142,82,1);
    box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);/
	-webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
	-moz-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
}

#navbar-site-top li {
   font-weight: bold;
    color: white;
}

#site-logo-wrapper{
    display:block;
}

/* === COVER MAIN STYLES === */
#cover-main{
   /*min-height:800px;*/
  /* background: url('../img/bg/rings-focused-bg-blurred.jpeg') no-repeat;*/
   background: url('../img/engagement/mr-mrs-both-kiss.jpg') no-repeat;
   background-size: cover;
   background-position:  -200px 10px;
   padding:0px;
}

 #cover-main{
   
    height:100%;
}
#cover-main .container-fluid{
   
    height:100%;
}
#cover-main .container-fluid{
    position:relative;
}
#cover-main .cover-img-row{
    position:absolute;
    width:100%;
    top:50%;
    -webkit-transform: translateY(-75%);
    -ms-transform: translateY(-75%);
    -o-transform: translateY(-75%);
    transform: translateY(-100%);
    opacity: 1;
}
#cover-main .cover-fade-row{
      position:absolute;
    width:100%;
    top:40%;

    opacity: 1;
}

.cover-couple-img{
    width:100%;
    box-shadow: 0 0 5px 5px #888;
    border: medium solid lightGray;
    
    border-radius: 100%;
}
.cover-img-float{
    position:absolute;
}
#float-img-wrapper-1{
    left:0;
    top:0;
    transform:translate(-65%,-45%);
    
    min-height:100px;
    z-index: -2;
}
#float-img-2{
    width:200px;
}

#float-img-wrapper-2{ 
    left:0;
    top:0;
    transform:translate(-190%,-10%);
    
    height:100px;
    z-index: -1;
}



.cover-img-wrapper{
    position:relative;
    
/*     height: 500px;
    box-shadow:10px 10px 10px 0px white inset;
    border-radius:100%*/
}

 #cover-fade-in-sub{
    font-family: 'Prata', serif; 
     font-size: 20px;
}
#cover-fade-in-header{
    
/*font-family: 'Parisienne', cursive;*/
    font-family: 'Great Vibes', cursive;
    
     font-size:50px;
}

#fade-in-wrapper-1{
    z-index: 10;
    background-color: rgba(0,0,0,.5);
    margin-top:45px;
}
#fade-in-wrapper-2{
    z-index: 10;
    background-color: rgba(0,0,0,.65);
    margin-top:5px;
    padding-top: 5px;
    border-radius:20px;
    border-width:2px;
    border-style:solid;
}

/* make keyframes that tell the start state and the end state of our object */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.fade-in {
  opacity:0;  /* make things invisible upon start */
  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
  -moz-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;

  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
  -moz-animation-fill-mode:forwards;
  animation-fill-mode:forwards;

  -webkit-animation-duration:1s;
  -moz-animation-duration:1s;
  animation-duration:1s;
}

.fade-in.one {
  -webkit-animation-delay: 0.7s;
  -moz-animation-delay: 0.7s;
  animation-delay: 0.7s;
}



.heart {
  background-color: red;
  display: inline-block;
  height: 30px;
  margin: 0 10px;
  position: relative;
  top: 0;
  transform: rotate(-45deg);
  width: 30px;
}

.heart:before,
.heart:after {
  content: "";
  background-color: red;
  border-radius: 50%;
  height: 30px;
  position: absolute;
  width: 30px;
}

.heart:before {
  top: -15px;
  left: 0;
}

.heart:after {
  left: 15px;
  top: 0;
}

/* === GALLERY SECTION === */
#gallery-main-1.ios{
    background-attachment: scroll;
}

#gallery-main-1 .section-header{
    font-family: 'Tangerine', cursive;
    font-weight: 600;
    color: #4E4948;
}

/* =================== */
/* === COUPLE INFO === */
/* =================== */

#about-couple-main{
    padding:0px;
    border: thin solid rgba(184,142,82,1);
}


.section-header  {
    font-family: 'Dancing Script', cursive;
    /*font-family: 'Tangerine', cursive;*/

    
}

.section-header.dark-text {
     text-shadow: 2px 2px #D3D3D3;
    
}
.section-header.light-text {
     text-shadow: 2px 2px #7e7e7e;
    
}

.couple-bg-row{
    padding-top: 40px;
    padding-bottom:25px;
    height: 700px;
}
.couple-bg-row .vertical-align-child{
    transform:translateY(-50%);
    top:30%;
}
.couple-info-card .card-block, .couple-info-card .card-block .card-link{
    color:white;
}

span.large-quote{
    /*font-size: 26px;
    font-family: 'Tangerine',cursive;
    */
}
    
#bride-bg-row{
   /* background: url('../img/bg/cleopatra.jpeg') no-repeat;
    */
      background: url('../img/engagement/bride-about-img.jpg') no-repeat;
  background-position: ;
background-size: cover ;
    border-right: thin solid rgba(184,142,82,1);/*
     box-shadow:5px 5px 50px 30px pink inset; */
   
}
#bride-bg-row-2{
    background: url('../img/bg/cleopatra.jpeg') no-repeat;
    
background-size: cover;
    border-right: thin solid rgba(184,142,82,1);
}

#bride-info-card .section-header{
    font-weight: 200;
}
/* ... */

